# vs_market

./: .gitignore  Makefile  README.md  currtext.txt  docker-compose.yaml  preview.ts  pyproject.toml  robot.txt
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 003dce7c02c1_product_updates.py  034ef055efc5_added_movie_title_unique_true.py  0482bb7c7ee7_added_activated_bool_field_in_product_.py  1ce075ffdd7f_user_model_migrate_2.py  21309bb22026_added_cascade_for_user_entity_relations.py  222eda7f1448_user_model_migrate.py  25591c03aa64_changed_product_description_field_to_.py  293dcf8e963e_added_movie_relations_to_usermodel.py  2a5309d631ce_product_updates.py  339d24aa0831_added_favorites_table.py  349d7d66f3fb_added_products_relations_to_usermodel.py  355ac71de9bb_initial_migration.py  3ab419b75d76_chatroom_and_message_tables_added.py  4e578303fba9_added_index_to_activated_field_in_.py  51a3868eb966_added_movie_models.py  51d190df5d7b_vectorized_productmodel_and_unique_.py  564812197d61_added_creator_enum_for_usermodel.py  587b12576926_updated_productmodel_for_full_text_.py  (+30 more)
app/core/: config.py  template_config.py
app/infra/: kafka_producer.py
app/logs/: app.log.2025-02-26
app/services/: chat_service.py  entity_service.py  fav_service.py  image_service.py  messaging_service.py  movie_service.py  order_service.py  payment_service.py  product_service.py  user_service.py
app/utils/: auth.py  context.py  dsreqs.py  image_processor.py  img_delete.py  misc.py  phone_val.py  preview_video.py  run_dsr.py  speach.py  temp_filters.py  v_converter.py
(+101 files in other folders)
